welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:14: error: ';' expected but identifier found.
} faireCarre()
  ^